fixed socials icons being overlapped by title wrapper

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -76,6 +76,7 @@
 	}
 	.text-container {
 		top: 10rem;
+		height: 15rem;
 		padding: 0 0 0 10rem;
 		h1 {
 			width: 20rem;
