--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -400,6 +400,7 @@
 		i {
 			color: $clr-green;
 			cursor: pointer;
+			z-index: 30;
 		}
 	}
 }
