--- a/styles/styles.css
+++ b/styles/styles.css
@@ -618,6 +618,7 @@ ul {
 }
 .contact-header .text-container {
   top: 10rem;
+  height: 15rem;
   padding: 0 0 0 10rem;
 }
 .contact-header .text-container h1 {
@@ -1096,6 +1097,7 @@ ul {
 .contact-details .socials i {
   color: #0e902d;
   cursor: pointer;
+  z-index: 30;
 }
 
 @media (max-width: 1650px) {
